modified:   index.html 	modified:   pages/api.html 	modified:   pages/home.html 	modified:   q/hashrate/index.php 	modified:   q/height/index.php 	modified:   q/index.html 	modified:   q/reward/index.php 	modified:   q/supply/index.php 	modified:   q/util.php

--- a/pages/home.html
+++ b/pages/home.html
@@ -80,7 +80,7 @@
             <a id="next-page" href="#" class="btn btn-default input-group-addon disabled"><i class="fa fa-arrow-left" aria-hidden="true"></i> Newer</a>
             <span class="input-group-addon">№</span>
             <input id="goto-height" type="text" class="form-control" placeholder="Height">
-            <a id="goto-height-go" href="#" class="btn btn-default input-group-addon">Go</a>
+            <a id="goto-height-go" href="/cockexploder/#" class="btn btn-default input-group-addon">Go</a>
             <a id="prev-page" href="#" class="btn btn-default input-group-addon">Older <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
         </div>
         <br />
