--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="http://blockexplorer.monkeytips.top"><strong>Monkeytips</strong></a>
+            <a class="navbar-brand " href="http://monkeytips.top/cockexploder/"><strong>Monkeytips</strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
