--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand " href="http://monkeytips.top/cockexploder/"><strong>Monkeytips</strong></a>
+            <a class="navbar-brand " href="http://monkeytips.online"><strong>Monkeytips</strong></a>
 			<div id="stats_updated"><i class="fa fa-bolt"></i></div>
         </div>
 
@@ -259,7 +259,8 @@ $('#txt_search').keyup(function(e){
 					<small>
 					<!-- This copyright should be left intact -->
 
-					Powered by <a target="_blank" href="https://github.com/turtlecoin/block-explorer"><i class="fa fa-github"></i> Turtle Blockchain Explorer</a> v. 1.0.0.<br />
+					Github  <a target="_blank" href="https://github.com/Marchay/block-explorer"><i class="fa fa-github"></i> MonkeyTips Block Explorer</a> Modified.<br />
+					<span class="text-muted">Forked from <strong>monkeytips/block-explorer</strong><br />
 					<span class="text-muted">Code from <strong>Karbowanec Blockchain Explorer</strong><br />
 					<span class="text-muted">Partially based on <strong>cryptonote-universal-pool</strong><br />
 					open sourced under the <a href="http://www.gnu.org/licenses/gpl-2.0.html">GPL</a></span>
